--- a/DeepCFR_Functional_Model.ipynb
+++ b/DeepCFR_Functional_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,16 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([4, 4, 1])"
+       "TensorShape([4, 3, 1])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,24 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(4, 256), dtype=float32, numpy=\n",
-       "array([[ 0.03618937,  0.02325362, -0.00305159, ...,  0.09963147,\n",
-       "        -0.05847101,  0.07675616],\n",
-       "       [ 0.03618937,  0.02325362, -0.00305159, ...,  0.09963147,\n",
-       "        -0.05847101,  0.07675616],\n",
-       "       [ 0.03618937,  0.02325362, -0.00305159, ...,  0.09963147,\n",
-       "        -0.05847101,  0.07675616],\n",
-       "       [ 0.03618937,  0.02325362, -0.00305159, ...,  0.09963147,\n",
-       "        -0.05847101,  0.07675616]], dtype=float32)>"
+       "array([[ 0.05379399,  0.06091026, -0.08076204, ...,  0.09084684,\n",
+       "         0.10094344, -0.02858025],\n",
+       "       [ 0.05379399,  0.06091026, -0.08076204, ...,  0.09084684,\n",
+       "         0.10094344, -0.02858025],\n",
+       "       [ 0.05379399,  0.06091026, -0.08076204, ...,  0.09084684,\n",
+       "         0.10094344, -0.02858025],\n",
+       "       [ 0.05379399,  0.06091026, -0.08076204, ...,  0.09084684,\n",
+       "         0.10094344, -0.02858025]], dtype=float32)>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,29 +135,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "### deepcfr model\n",
-    "\n",
-    "# inputs\n",
-    "#cards = [tf.keras.Input([2,]), tf.keras.Input([3,])]\n",
-    "\n",
-    "\n",
     "def get_DeepCFR_model(output_dim, n_cards, n_bets, n_actions):\n",
     "    \"\"\"\n",
     "    output_dim: dimensionality of embedding\n",
-    "    n_cards: a list of card numbers for each phase of the game (e.g. 2 preflop, 3 flop) [2,3,1,1]\n",
-    "    n_bets: maximal number of bets in a game \n",
+    "    n_cards: a list of card numbers for each phase of the game (e.g. 2 preflop, 3 flop)\n",
+    "    n_bets: maximal number of bets in a game\n",
     "    n_actions: number of possible action categories\n",
     "    \"\"\"\n",
     "    \n",
     "    # define inputs\n",
     "    cards = [tf.keras.Input([n,]) for n in n_cards]\n",
-    "    bets = tf.keras.Input([n_bets,]), tf.keras.Input([n_bets])\n",
+    "    bets = tf.keras.Input([n_bets,])\n",
     "\n",
     "    ### define layers\n",
     "\n",
@@ -187,7 +179,7 @@
     "        card_embs.append(embedding(card_group))\n",
     "\n",
     "    card_embs = tf.concat(card_embs, axis= 1)\n",
-    "    \n",
+    "\n",
     "    x = card1(card_embs)\n",
     "    x = card2(x)\n",
     "    x = card3(x)\n",
@@ -206,10 +198,11 @@
     "    z = tf.nn.relu(comb3(z) + z)\n",
     "\n",
     "    # normalize (needed because of bet sizes)\n",
-    "    z = (z - tf.math.reduce_mean(z, axis=None)) / tf.math.reduce_std(z, axis=None) # choose axis or per-image standardization\n",
+    "    z = (z - tf.math.reduce_mean(z, axis=None)) / tf.math.reduce_std(z, axis=None)\n",
     "\n",
     "    output = action_head(z)\n",
-    "    \n",
+    "\n",
+    "\n",
     "    DeepCFR_model = tf.keras.Model(inputs = [cards, bets], outputs = output)\n",
     "    \n",
     "    return DeepCFR_model"
@@ -217,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,20 +219,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(4, 3), dtype=float32, numpy=\n",
-       "array([[ 0.04310301, -0.16374576, -0.4994409 ],\n",
-       "       [ 0.8736033 ,  0.18065059, -0.48475394],\n",
-       "       [ 0.7947258 ,  0.21145397, -0.46920648],\n",
-       "       [ 0.86321205,  0.14816505, -0.32094324]], dtype=float32)>"
+       "array([[0.38308382, 0.2785599 , 1.4356306 ],\n",
+       "       [0.38308424, 0.278561  , 1.4356292 ],\n",
+       "       [0.38308424, 0.278561  , 1.4356292 ],\n",
+       "       [0.38308424, 0.278561  , 1.4356292 ]], dtype=float32)>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
