get_info_state function

--- a/DeepCFR_Functional_Model.ipynb
+++ b/DeepCFR_Functional_Model.ipynb
@@ -114,14 +114,14 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(4, 256), dtype=float32, numpy=\n",
-       "array([[ 0.05379399,  0.06091026, -0.08076204, ...,  0.09084684,\n",
-       "         0.10094344, -0.02858025],\n",
-       "       [ 0.05379399,  0.06091026, -0.08076204, ...,  0.09084684,\n",
-       "         0.10094344, -0.02858025],\n",
-       "       [ 0.05379399,  0.06091026, -0.08076204, ...,  0.09084684,\n",
-       "         0.10094344, -0.02858025],\n",
-       "       [ 0.05379399,  0.06091026, -0.08076204, ...,  0.09084684,\n",
-       "         0.10094344, -0.02858025]], dtype=float32)>"
+       "array([[ 0.0368406 ,  0.10748482,  0.12105969, ...,  0.02069462,\n",
+       "         0.1356524 , -0.0932651 ],\n",
+       "       [ 0.0368406 ,  0.10748482,  0.12105969, ...,  0.02069462,\n",
+       "         0.1356524 , -0.0932651 ],\n",
+       "       [ 0.0368406 ,  0.10748482,  0.12105969, ...,  0.02069462,\n",
+       "         0.1356524 , -0.0932651 ],\n",
+       "       [ 0.0368406 ,  0.10748482,  0.12105969, ...,  0.02069462,\n",
+       "         0.1356524 , -0.0932651 ]], dtype=float32)>"
       ]
      },
      "execution_count": 6,
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,27 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(4, 3), dtype=float32, numpy=\n",
-       "array([[0.38308382, 0.2785599 , 1.4356306 ],\n",
-       "       [0.38308424, 0.278561  , 1.4356292 ],\n",
-       "       [0.38308424, 0.278561  , 1.4356292 ],\n",
-       "       [0.38308424, 0.278561  , 1.4356292 ]], dtype=float32)>"
+       "array([[ 0.95304626, -2.4137723 , -0.14432287]], dtype=float32)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,30 +238,30 @@
     "\n",
     "hole_cards = tf.constant( [   \n",
     "    [[1],[10]],                            \n",
-    "    [[7],[19]],                          \n",
-    "    [[35],[51]],                         \n",
-    "    [[23],[12]]                           \n",
+    "    #[[7],[19]],                          \n",
+    "    #[[35],[51]],                         \n",
+    "    #[[23],[12]]                           \n",
     "],dtype=tf.float32)\n",
     "\n",
     "\n",
     "flop = tf.constant([\n",
     "    [[2],[9],[8]],            \n",
-    "    [[2],[9],[8]],         \n",
-    "    [[2],[9],[8]],           \n",
-    "    [[2],[9],[8]]\n",
+    "    #[[2],[9],[8]],         \n",
+    "    #[[2],[9],[8]],           \n",
+    "    #[[2],[9],[8]]\n",
     "], dtype = tf.float32)\n",
     "\n",
     "cards_inp = [hole_cards, flop]\n",
     "\n",
     "bets = tf.constant([\n",
     "    [1,2,2,4],                  \n",
-    "    [1,0,2,4],                \n",
-    "    [1,0,2,4],                \n",
-    "    [1,0,2,4]\n",
+    "    #[1,0,2,4],                \n",
+    "    #[1,0,2,4],                \n",
+    "    #[1,0,2,4]\n",
     "], dtype= tf.float32)\n",
     "\n",
     "\n",
-    "DeepCFR_model([cards_inp, bets])"
+    "DeepCFR_model([cards_inp, bets]).numpy()"
    ]
   },
   {
