random sample function for save_to_memory testing

--- a/DeepCFR_Functional_Model.ipynb
+++ b/DeepCFR_Functional_Model.ipynb
@@ -114,14 +114,14 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(4, 256), dtype=float32, numpy=\n",
-       "array([[ 0.07170619, -0.02860431,  0.05638808, ...,  0.08935839,\n",
-       "        -0.02575767,  0.03144985],\n",
-       "       [ 0.07170619, -0.02860431,  0.05638808, ...,  0.08935839,\n",
-       "        -0.02575767,  0.03144985],\n",
-       "       [ 0.07170619, -0.02860431,  0.05638808, ...,  0.08935839,\n",
-       "        -0.02575767,  0.03144985],\n",
-       "       [ 0.07170619, -0.02860431,  0.05638808, ...,  0.08935839,\n",
-       "        -0.02575767,  0.03144985]], dtype=float32)>"
+       "array([[-0.09042761, -0.0743332 ,  0.03554843, ...,  0.03009995,\n",
+       "        -0.01732373,  0.11055709],\n",
+       "       [-0.09042761, -0.0743332 ,  0.03554843, ...,  0.03009995,\n",
+       "        -0.01732373,  0.11055709],\n",
+       "       [-0.09042761, -0.0743332 ,  0.03554843, ...,  0.03009995,\n",
+       "        -0.01732373,  0.11055709],\n",
+       "       [-0.09042761, -0.0743332 ,  0.03554843, ...,  0.03009995,\n",
+       "        -0.01732373,  0.11055709]], dtype=float32)>"
       ]
      },
      "execution_count": 6,
@@ -219,22 +219,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.13098928, -1.6364983 , -1.7688687 ]], dtype=float32)"
+       "array([[ 0.8535318, -3.0790703, -1.6284188]], dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### Test Deep CFR Model with batch size of 4\n",
+    "\n",
+    "\n",
     "\n",
     "hole_cards = tf.constant( [   \n",
     "    [[1],[10]],                            \n",
@@ -266,53 +268,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save a random training example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def generate_random_sample():\n",
+    "    hole_cards = np.random.randint(0,51,(1,2,1))\n",
+    "\n",
+    "    flop_cards = np.random.randint(0,51,(1,3,1))\n",
+    "\n",
+    "    bet_history = np.random.randint(0,3,(1,12))\n",
+    "\n",
+    "\n",
+    "    info_state = [[hole_cards, flop_cards], bet_history] # this is the form in which the model takes its input\n",
+    "\n",
+    "    CFR_iteration = np.random.randint(1,40000000)\n",
+    "\n",
+    "    action_advantages = np.random.random((1,3)) + np.random.randint(-3,3,(1,3)) # target for the network's output\n",
+    "    \n",
+    "    return info_state, CFR_iteration, action_advantages # input arguments to save_to_memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "#tf.keras.utils.plot_model(DeepCFR_model, \"plotmodel.png\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[<tf.Tensor: shape=(1, 2, 1), dtype=float32, numpy=\n",
-       "  array([[[ 1.],\n",
-       "          [10.]]], dtype=float32)>,\n",
-       "  <tf.Tensor: shape=(1, 3, 1), dtype=float32, numpy=\n",
-       "  array([[[2.],\n",
-       "          [9.],\n",
-       "          [8.]]], dtype=float32)>],\n",
-       " <tf.Tensor: shape=(1, 4), dtype=float32, numpy=array([[1., 2., 2., 4.]], dtype=float32)>]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[cards_inp, bets]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
