--- a/DeepCFR_Functional_Model.ipynb
+++ b/DeepCFR_Functional_Model.ipynb
@@ -2,11 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import h5py\n",
+    "import numpy as np\n",
+    "import random"
    ]
   },
   {
@@ -114,14 +117,14 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(4, 256), dtype=float32, numpy=\n",
-       "array([[-0.09042761, -0.0743332 ,  0.03554843, ...,  0.03009995,\n",
-       "        -0.01732373,  0.11055709],\n",
-       "       [-0.09042761, -0.0743332 ,  0.03554843, ...,  0.03009995,\n",
-       "        -0.01732373,  0.11055709],\n",
-       "       [-0.09042761, -0.0743332 ,  0.03554843, ...,  0.03009995,\n",
-       "        -0.01732373,  0.11055709],\n",
-       "       [-0.09042761, -0.0743332 ,  0.03554843, ...,  0.03009995,\n",
-       "        -0.01732373,  0.11055709]], dtype=float32)>"
+       "array([[ 0.14479068, -0.13707975,  0.17693862, ..., -0.11987062,\n",
+       "         0.05106021,  0.0828777 ],\n",
+       "       [ 0.14479068, -0.13707975,  0.17693862, ..., -0.11987062,\n",
+       "         0.05106021,  0.0828777 ],\n",
+       "       [ 0.14479068, -0.13707975,  0.17693862, ..., -0.11987062,\n",
+       "         0.05106021,  0.0828777 ],\n",
+       "       [ 0.14479068, -0.13707975,  0.17693862, ..., -0.11987062,\n",
+       "         0.05106021,  0.0828777 ]], dtype=float32)>"
       ]
      },
      "execution_count": 6,
@@ -219,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.8535318, -3.0790703, -1.6284188]], dtype=float32)"
+       "array([[-0.5071793 ,  0.24127457, -0.6368238 ]], dtype=float32)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,18 +273,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save a random training example"
+    "# Save random training examples with a Memory Object to a hdf5 file\n",
+    "\n",
+    "\n",
+    "\n",
+    "### What to do:\n",
+    "\n",
+    "* Each memory (advantage_memory_player0, advantage_memory_player1 and strategy_memory) should have its own MemoryWriter object with a different file_name set. This is "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import h5py\n",
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
     "\n",
     "def generate_random_sample():\n",
+    "    \"\"\"\n",
+    "    Generates data in a form the network can process\n",
+    "    \"\"\"\n",
+    "    \n",
     "    hole_cards = np.random.randint(0,51,(1,2,1))\n",
     "\n",
     "    flop_cards = np.random.randint(0,51,(1,3,1))\n",
@@ -295,7 +313,130 @@
     "\n",
     "    action_advantages = np.random.random((1,3)) + np.random.randint(-3,3,(1,3)) # target for the network's output\n",
     "    \n",
-    "    return info_state, CFR_iteration, action_advantages # input arguments to save_to_memory"
+    "    return info_state, CFR_iteration, action_advantages # input arguments to save_to_memory\n",
+    "\n",
+    "info_state, iteration, values = generate_random_sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flatten_data_for_memory(info_state, iteration, values):\n",
+    "    \"\"\"\n",
+    "    Flattens data to store into a memory object.\n",
+    "    \"\"\"\n",
+    "    flattened_data = np.concatenate(\n",
+    "                    [\n",
+    "                        info_state[0][0].flatten(),\n",
+    "                        info_state[1].flatten(),\n",
+    "                        np.array([iteration]),\n",
+    "                        values.flatten() \n",
+    "                    ],  axis = 0)\n",
+    "    \n",
+    "    return flattened_data\n",
+    "\n",
+    "\n",
+    "class MemoryWriter(object):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Keeps track of how many items are already processed for this memory. \n",
+    "    It's main purpose is to store the generated data with the save_to_memory method\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \n",
+    "    def __init__(self, max_size, vector_length, flatten_func, file_name):\n",
+    "        \n",
+    "        self.max_size = max_size\n",
+    "        \n",
+    "        self.vector_len = vector_length # flatten the input that we want to store and take len\n",
+    "        \n",
+    "        self.flatten_func = flatten_func\n",
+    "            \n",
+    "        self.counter = np.array([0,0]) # can't assign a single number to a dataset in hdf5 files\n",
+    "        \n",
+    "        self.file_name = file_name\n",
+    "        \n",
+    "        # load previous counter or initiate memory file\n",
+    "        try:\n",
+    "            with h5py.File(self.file_name, \"r\") as hf:\n",
+    "                self.counter = np.array(hf.get(\"counter\"))\n",
+    "            print(\"previous counter loaded\")\n",
+    "                \n",
+    "        except:\n",
+    "            # create new dataset file with a counter and an array\n",
+    "            with h5py.File(self.file_name, \"w\") as hf:\n",
+    "                \n",
+    "                hf.create_dataset(\"counter\", data= self.counter)\n",
+    "                hf.create_dataset(\"data\", (self.max_size, self.vector_len), dtype = np.float32)\n",
+    "            print(f\"new counter set and dataset of size {(self.max_size, self.vector_len)} is initiated.\")\n",
+    "        \n",
+    "    def save_to_memory(self, data):\n",
+    "        \"\"\"\n",
+    "        Takes a list of tuples (info_state, iteration, values) and stores each to the memory hdf5 file.\n",
+    "        \n",
+    "        Uses Reservoir sampling for samples that exceed the specified max_size.\n",
+    "        \"\"\"\n",
+    "        with h5py.File(self.file_name, 'r+') as hf:\n",
+    "            \n",
+    "            # store each tuple in data\n",
+    "            for info_state, iteration, values in data:\n",
+    "                \n",
+    "                self.counter[1] += 1\n",
+    "                \n",
+    "                # save counter only every 100 steps\n",
+    "                if not self.counter[1]%100:\n",
+    "                    hf.get(\"counter\")[1] = self.counter[1]\n",
+    "                \n",
+    "                # if reservoir is not yet full, simply add new sample\n",
+    "                if self.counter[1] < self.max_size:\n",
+    "\n",
+    "                    flattened_data = self.flatten_func(info_state, iteration, values)\n",
+    "\n",
+    "                    hf.get(\"data\")[self.counter[1]] = flattened_data # fill empty row with data\n",
+    "\n",
+    "                # if reservoir is full already, randomly replace or not replace old data\n",
+    "                else:\n",
+    "                    idx = random.randint(0, self.counter[1]) # index to replace (or not)\n",
+    "                    if idx < self.max_size:\n",
+    "\n",
+    "                        flattened_data = self.flatten_func(info_state, iteration, values)\n",
+    "\n",
+    "                        hf.get(\"data\")[idx] =  flattened_data # replace the old data at idx with the new sample\n",
+    "\n",
+    "                    else:\n",
+    "                        pass # data is not stored in favor of old data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "previous counter loaded\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = MemoryWriter(max_size = 1000, vector_length = 18, flatten_func = flatten_data_for_memory,\n",
+    "                 file_name = \"value_memory_p1.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [generate_random_sample() for _ in range(10000)]\n",
+    "\n",
+    "m.save_to_memory(data)"
    ]
   },
   {
