--- a/DeepCFR_Functional_Model.ipynb
+++ b/DeepCFR_Functional_Model.ipynb
@@ -441,6 +441,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16900\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5py.File(\"advantage_memory.h5\",\"r+\") as hf:\n",
+    "    print(np.array(hf.get(\"counter\"))[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
