--- a/DeepCFR_Functional_Model.ipynb
+++ b/DeepCFR_Functional_Model.ipynb
@@ -458,6 +458,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write Code to Train the Model on data in advantage_memory.h5 and strategy_memory.h5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
