final cleanup done

--- a/ray_code/test_poker_bot.ipynb
+++ b/ray_code/test_poker_bot.ipynb
@@ -66990,7 +66990,7 @@
     }
    ],
    "source": [
-    "if save_plot == True:\n",
+    "if save_plot:\n",
     "    fn = 'game_results.svg'\n",
     "save_path = os.path.join(results_dir, fn)\n",
     "\n",
@@ -67055,7 +67055,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
